--- a/.github/workflows/commit-notify.yml
+++ b/.github/workflows/commit-notify.yml
@@ -5,38 +5,26 @@ on:
     branches: [ main ]
     paths-ignore:
       - 'cache.json'
-      - '*.md'
-      - '.github/workflows/*.yml'
 
 jobs:
   notify-commit:
     runs-on: ubuntu-latest
     
     steps:
+      - name: Debug commit info
+        run: |
+          echo "Event: ${{ github.event_name }}"
+          echo "Repository: ${{ github.repository }}"
+          echo "Commit SHA: ${{ github.sha }}"
+          echo "Commit Message: ${{ github.event.head_commit.message }}"
+          echo "Author: ${{ github.event.head_commit.author.name }}"
+          
       - name: Send Discord notification
         run: |
-          # Extract commit info
-          COMMIT_MSG="${{ github.event.head_commit.message }}"
-          COMMIT_SHA="${{ github.sha }}"
-          SHORT_SHA="${COMMIT_SHA:0:7}"
-          AUTHOR="${{ github.event.head_commit.author.name }}"
-          REPO="${{ github.repository }}"
-          BRANCH="${{ github.ref_name }}"
-          COMMIT_URL="${{ github.event.head_commit.url }}"
-          
-          # Send to Discord
           curl -H "Content-Type: application/json" \
                -X POST \
                -d '{
-                 "embeds": [{
-                   "title": "🚀 New Commit to GitHub Notifier",
-                   "description": "**Commit:** [`'"$SHORT_SHA"'`]('"$COMMIT_URL"')\n**Message:** '"$(echo "$COMMIT_MSG" | jq -R .)"'\n**Author:** '"$AUTHOR"'\n**Branch:** `'"$BRANCH"'`",
-                   "color": 5763719,
-                   "timestamp": "'"${{ github.event.head_commit.timestamp }}"'",
-                   "footer": {
-                     "text": "'"$REPO"'"
-                   }
-                 }]
+                 "content": "🚀 **New Commit** to `${{ github.repository }}`\n**Message:** ${{ toJson(github.event.head_commit.message) }}\n**Author:** ${{ github.event.head_commit.author.name }}\n**SHA:** `${{ github.sha }}`"
                }' \
                ${{ secrets.DISCORD_WEBHOOK }}
         continue-on-error: true
