--- a/.github/workflows/commit-notify.yml
+++ b/.github/workflows/commit-notify.yml
@@ -11,20 +11,24 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Debug commit info
-        run: |
-          echo "Event: ${{ github.event_name }}"
-          echo "Repository: ${{ github.repository }}"
-          echo "Commit SHA: ${{ github.sha }}"
-          echo "Commit Message: ${{ github.event.head_commit.message }}"
-          echo "Author: ${{ github.event.head_commit.author.name }}"
-          
       - name: Send Discord notification
         run: |
+          # Get short SHA
+          SHORT_SHA=$(echo "${{ github.sha }}" | cut -c1-7)
+          
+          # Send to Discord with GitHub-style format
           curl -H "Content-Type: application/json" \
                -X POST \
                -d '{
-                 "content": "🚀 **New Commit** to `${{ github.repository }}`\n**Message:** ${{ toJson(github.event.head_commit.message) }}\n**Author:** ${{ github.event.head_commit.author.name }}\n**SHA:** `${{ github.sha }}`"
+                 "embeds": [{
+                   "description": "**[${{ github.event.head_commit.author.name }}](${{ github.event.head_commit.author.url }})** committed to **[${{ github.repository }}](${{ github.event.repository.html_url }})**\n\n[`'"$SHORT_SHA"'`](${{ github.event.head_commit.url }}) '"$(echo '${{ github.event.head_commit.message }}' | jq -R .)"'",
+                   "color": 7506394,
+                   "timestamp": "${{ github.event.head_commit.timestamp }}",
+                   "footer": {
+                     "text": "${{ github.event.head_commit.author.name }}",
+                     "icon_url": "${{ github.event.head_commit.author.avatar_url }}"
+                   }
+                 }]
                }' \
                ${{ secrets.DISCORD_WEBHOOK }}
         continue-on-error: true
