--- a/.github/workflows/commit-notify.yml
+++ b/.github/workflows/commit-notify.yml
@@ -11,24 +11,27 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Send Discord notification
-        run: |
-          # Get short SHA
-          SHORT_SHA=$(echo "${{ github.sha }}" | cut -c1-7)
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.22'
           
-          # Send to Discord with GitHub-style format
-          curl -H "Content-Type: application/json" \
-               -X POST \
-               -d '{
-                 "embeds": [{
-                   "description": "**[${{ github.event.head_commit.author.name }}](${{ github.event.head_commit.author.url }})** committed to **[${{ github.repository }}](${{ github.event.repository.html_url }})**\n\n[`'"$SHORT_SHA"'`](${{ github.event.head_commit.url }}) '"$(echo '${{ github.event.head_commit.message }}' | jq -R .)"'",
-                   "color": 7506394,
-                   "timestamp": "${{ github.event.head_commit.timestamp }}",
-                   "footer": {
-                     "text": "${{ github.event.head_commit.author.name }}",
-                     "icon_url": "${{ github.event.head_commit.author.avatar_url }}"
-                   }
-                 }]
-               }' \
-               ${{ secrets.DISCORD_WEBHOOK }}
+      - name: Send commit notification
+        run: |
+          # Build commit notifier
+          go build -o commit-notifier ./cmd/commit-notifier
+          
+          # Run with environment variables
+          ./commit-notifier
+        env:
+          GITHUB_SHA: ${{ github.sha }}
+          COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
+          COMMIT_AUTHOR: ${{ github.event.head_commit.author.name }}
+          GITHUB_REPOSITORY: ${{ github.repository }}
+          COMMIT_URL: ${{ github.event.head_commit.url }}
+          REPO_URL: ${{ github.event.repository.html_url }}
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         continue-on-error: true
