--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -45,7 +45,7 @@ jobs:
           path: |
             ~/.cache/go-build
             ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}-v0.1
           restore-keys: |
             ${{ runner.os }}-go-
             
