--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -5,7 +5,7 @@ on:
     - cron: '0 0 * * *'
     # 9:00 PM Vietnam = 14:00 UTC - Evening digest  
     - cron: '30 15 * * *'
-    # Every 30 minutes for instant checks (reduced from 10 min to reduce cache commits)
+    # Every 30 minutes for instant checks
     - cron: '*/30 * * * *'
   push:
     branches: [ main ]
@@ -13,7 +13,7 @@ on:
       - 'cache.json'
       - 'README.md'
       - '*.md'
-  workflow_dispatch:  # Manual trigger
+  workflow_dispatch:
     inputs:
       check_type:
         description: 'Type of check to run'
@@ -33,24 +33,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
        
-      - name: Setup Go
+      - name: Setup Go with cache
         uses: actions/setup-go@v5
         with:
           go-version: '1.22'
+          cache: true
+          cache-dependency-path: go.sum
          
-      # Cache TRƯỚC khi download - quan trọng!
-      - name: Cache Go modules
-        id: cache
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cache/go-build
-            ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}-v5
-          restore-keys: |
-            ${{ runner.os }}-go-
-        continue-on-error: true
-        
       - name: Download dependencies
         run: go mod download
        
