--- a/.github/workflows/scheduled-notify.yml
+++ b/.github/workflows/scheduled-notify.yml
@@ -28,6 +28,15 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      
+      # Restore cache from previous runs (this prevents duplicate notifications)
+      - name: Cache notification state
+        uses: actions/cache@v3
+        with:
+          path: cache.json
+          key: gh-notify-cache-${{ github.run_number }}
+          restore-keys: |
+            gh-notify-cache-
        
       - name: Setup Go with cache
         uses: actions/setup-go@v5
