--- a/.github/workflows/scheduled-notify.yml
+++ b/.github/workflows/scheduled-notify.yml
@@ -29,12 +29,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       
+      # Get current date for cache key
+      - name: Get date
+        id: date
+        run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+      
       # Restore cache from previous runs (this prevents duplicate notifications)
       - name: Cache notification state
         uses: actions/cache@v3
         with:
           path: cache.json
-          key: gh-notify-cache-${{ github.run_number }}
+          # Use date-based cache key so all runs on the same day share cache
+          key: gh-notify-cache-${{ steps.date.outputs.date }}
           restore-keys: |
             gh-notify-cache-
        
