--- a/.env.example
+++ b/.env.example
@@ -19,18 +19,6 @@ CACHE_FILE=cache.json
 TIMEZONE=Asia/Ho_Chi_Minh
 
 # Commit Tracking Configuration
-# Enable real-time commit tracking in instant checks (not just daily digests)
-TRACK_COMMITS_REALTIME=false
-
-# How far back to check for commits (in minutes)
-# Default: 120 (2 hours), recommended for instant checks that run every 2 hours
-COMMIT_LOOKBACK_MINUTES=120
-
-# Comma-separated list of repositories to track
-# Format: "owner/repo" or just "repo" (will use your username)
-# Examples: "torvalds/linux,facebook/react,my-private-repo"
-# Leave empty to track ALL your repositories
-TRACKED_REPOSITORIES=
-
-# Enable commit tracking in daily digests (morning/evening)
+# NOTE: Real-time commit tracking is now handled by GitHub Actions (see ACTION_USAGE.md)
+# This setting only affects daily digest reports (morning/evening summaries)
 TRACK_ALL_COMMITS=true
