--- a/action.yml
+++ b/action.yml
@@ -58,27 +58,6 @@ inputs:
 runs:
   using: 'composite'
   steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Setup Go
-      uses: actions/setup-go@v5
-      with:
-        go-version: '1.22'
-        cache: true
-        cache-dependency-path: go.sum
-      
-    - name: Download dependencies
-      shell: bash
-      run: go mod download
-    
-    - name: Build commit-notifier
-      shell: bash
-      run: |
-        go build -o commit-notifier ./cmd/commit-notifier
-        chmod +x commit-notifier
-        echo "$(pwd)" >> $GITHUB_PATH
-    
     - name: Run commit notifier
       shell: bash
       env:
@@ -94,5 +73,4 @@ runs:
         NOTIFICATION_TITLE: ${{ inputs.notification-title }}
         GITHUB_ACTOR: ${{ inputs.actor }}
         BRANCH_NAME: ${{ inputs.branch }}
-      run: |
-        ./commit-notifier
+      run: ${{ github.action_path }}/bin/commit-notifier
